project/logs/20251017_115216.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Compile Succeeded,path:Object3d.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3d.PS.hlsl,prefile:ps_6_0

Compile Succeeded,path:Object3d.PS.hlsl,profile:ps_6_0

Begin CompileShader,path:Particle.VS.hlsl,prefile:vs_6_0

Particle.VS.hlsl:10:40: error: redefinition of 'gTransformationMatrices' with a different type: 'StructuredBuffer<TransformationMatrix>' vs 'const TransformationMatrix [10]'
StructuredBuffer<TransformationMatrix> gTransformationMatrices : register(t0);
                                       ^
Particle.VS.hlsl:8:22: note: previous definition is here
TransformationMatrix gTransformationMatrices[10];
                     ^
Particle.VS.hlsl:22:23: error: no matching function for call to 'mul'
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'float' for 1st argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^   ~~~~~~~~~~~~~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'float' for 1st argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^   ~~~~~~~~~~~~~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'float' for 1st argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^   ~~~~~~~~~~~~~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'const TransformationMatrix' to 'float' for 2nd argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'const TransformationMatrix' to 'vector<float, 1>' for 2nd argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'const TransformationMatrix' to 'matrix<float, 1, 1>' for 2nd argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'matrix<float, 1, 4>' for 1st argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^   ~~~~~~~~~~~~~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'matrix<float, 1, 1>' for 1st argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^   ~~~~~~~~~~~~~~
Particle.VS.hlsl:22:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'matrix<float, 1, 1>' for 1st argument
    output.position = mul(input.position, gTransformationMatrices[instanceID]);
                      ^   ~~~~~~~~~~~~~~

